--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,6 +24,32 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb)); */
+  /* -ms-overflow-style: none; */
+  /* Firefox용 스크롤바 커스텀 */
+  scrollbar-width: thin;
+  scrollbar-color: #888 transparent;
+}
+
+/* 스크롤바 숨김 - Chrome, Safari 등 webkit 기반 브라우저. */
+/* ::-webkit-scrollbar {
+  display: none;
+} */
+
+/* webkit용(chrome, safari 등) 스크롤바 커스텀 */
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #aea9a9;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #7b7676;
 }
 
 @layer utilities {
